# shadow-gentcore

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: categories.yaml  domains.yaml  genesis_rules.yaml  mcp_servers.yaml  rules.yaml  workflow_policy.yaml  workspace.yaml
config/environments/: cloud.yaml  local.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  GITHUB_REPOS_GUIDE.md  SYSTEM_GUIDE.md  TEAM_GUIDE.md
docs/references/: authoring-guide.md  certification-guide.md  tool-integration-guide.md
docs/templates/: QUALITY_SCORECARD_TEMPLATE.md  domain_knowledge_checklist.md
harness/: __init__.py
harness/authoring/: __init__.py  certifier.py  compatibility.py  publisher.py  scaffolder.py  validator.py
harness/bridges/: __init__.py  browser_bridge.py  observability_bridge.py
harness/cli/: __init__.py  ai.py
harness/core/: __init__.py  agent_registry.py  agent_runner.py  budget_tracker.py  ci_hooks.py  composition_engine.py  context_engine.py  cross_domain.py  evaluator_loop.py  feedback_loop.py  genesis_verifier.py  grading_engine.py  guardrails.py  handoff.py  manifest_loader.py  memory_store.py  message_bus.py  mode_dispatcher.py  output_parser.py  output_validator.py  permissions.py  prompt_assembler.py  rule_engine.py  runtime.py  schema_validator.py  step_contract.py  storage.py  tool_disclosure.py  tool_executor.py  validation_pipeline.py  workflow_state.py  workspace.py  worktree_manager.py
harness/lints/: __init__.py  rules.py
harness/providers/: anthropic_provider.py  (+6 more)
scripts/: run_domain_task.py  run_genesis_e2e.py
(+195 files in other folders)
